--- a/story.html
+++ b/story.html
@@ -1,8 +1,11 @@
 <!DOCTYPE HTML>
 <html style="height: 100%;" lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta http-equiv="Content-Type" content="text/html" charset="utf-8" >
+<meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1"/>
+  <meta name="apple-mobile-web-app-capable" content="yes">
 <!-- Created using Articulate Storyline 2.11 - http://www.articulate.com  --> 
 <!-- version: 2.11.1609.3020 --> 
 
