broke after second push

--- a/story_html5.html
+++ b/story_html5.html
@@ -96,8 +96,8 @@
 		globals.strContentFolder = "story_content";
 		globals.bProjector = false;
 		globals.strSwfFile = "story.swf";
-		globals.nWidth = 980;
-		globals.nHeight = 658;
+		globals.nWidth = device-width;
+		globals.nHeight = device-width;
 		globals.strScale = "noscale";   // noscale | show all
 		globals.strBrowserSize = "default";      // default, fullscreen, optimal
 		globals.strBgColor = "#FFFFFF";
